Added add user endpoint
